--- a/google_home_page.html
+++ b/google_home_page.html
@@ -8,7 +8,9 @@
 <body>
 <main>
     <div class="header">
-    
+        <span class="material-icons header-element1">
+            apps
+        </span>
     </div>
 </main>
 </html>
