Completed The navigation bar for google homepage

--- a/google_home_page.html
+++ b/google_home_page.html
@@ -4,13 +4,31 @@
         <title> Welcome to Google Home Page</title>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
+        <link href="style_google.css"
+        rel="stylesheet">
     </head>
 <body>
 <main>
     <div class="header">
-        <span class="material-icons header-element1">
+        <span class="header-element">
+         <a href="https://web.archive.org/web/20191130234759if_/https://www.google.com/">   About </a>
+        </span>
+        <span class="header-element">
+            <a href="https://web.archive.org/web/20191130234759/https://store.google.com/US?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US">Store</a>
+        </span>
+        <span class="header-end">
+            Gmail
+        </span>
+        <span>
+            Images
+        </span>
+        <span class="material-icons">
             apps
         </span>
+        <span class="github-icon">
+        <a href="https://github.com/MS-LEGACY"><img src="iconmonstr-github-1-240.png" class="github-image" alt="This is a github icon leading to my github page"></a>
+        </span>
+
     </div>
 </main>
 </html>
