--- a/google_home_page.html
+++ b/google_home_page.html
@@ -30,5 +30,13 @@
         </span>
 
     </div>
+    <div class="main-page">
+        
+        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" class="google-image">
+        
+    </div>
+    <div class="search-bar">
+        <input type="text" class="search-box">
+    </div>
 </main>
 </html>
