Made Changes to search bar

--- a/google_home_page.html
+++ b/google_home_page.html
@@ -36,7 +36,11 @@
         
     </div>
     <div class="search-bar">
+        <span class="material-icons search-magnifying">
+            search
+        </span>
         <input type="text" class="search-box">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/e/e8/Google_mic.svg" class="voice-box">
     </div>
 </main>
 </html>
