Made Changes to search bar and github icon

--- a/google_home_page.html
+++ b/google_home_page.html
@@ -26,13 +26,13 @@
             apps
         </span>
         <span class="github-icon">
-        <a href="https://github.com/MS-LEGACY"><img src="iconmonstr-github-1-240.png" class="github-image" alt="This is a github icon leading to my github page"></a>
+        <a href="https://github.com/MS-LEGACY"><img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" class="github-image" alt="This is a github icon leading to my github page"></a>
         </span>
 
     </div>
     <div class="main-page">
         
-        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" class="google-image">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Google_2015_logo.svg" class="google-image">
         
     </div>
     <div class="search-bar">
