Completed The Buttons for Searching

--- a/google_home_page.html
+++ b/google_home_page.html
@@ -42,5 +42,9 @@
         <input type="text" class="search-box">
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e8/Google_mic.svg" class="voice-box">
     </div>
+    <div class="search-buttons">
+       <button class="search-button-styled">Google Search</button>
+       <button class="search-button-styled">I'm Feeling Lucky</button>
+    </div>
 </main>
 </html>
