--- a/google_home_page.html
+++ b/google_home_page.html
@@ -46,5 +46,28 @@
        <button class="search-button-styled">Google Search</button>
        <button class="search-button-styled">I'm Feeling Lucky</button>
     </div>
+    <footer>
+        <div class="footer-bar">
+        <p class="footer-indiv-elem">
+            About
+        </p>
+        <p class="footer-indiv-elem">
+            Advertising
+        </p>
+        <p class="footer-indiv-elem">
+            Business
+        </p>
+        <p class="footer-indiv">
+            Privacy
+        </p>
+        <p class="footer-indiv-elem">
+            Terms
+        </p>
+        <p class="footer-indiv-elem">
+            Settings
+        </p>
+        </div>
+    </footer>
+
 </main>
 </html>
