--- a/google_home_page.html
+++ b/google_home_page.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Welcome to Google Home Page</title>
+        <title> Google </title>
+        <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/0/09/IOS_Google_icon.png" type = "image/x-icon">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
         <link href="style_google.css"
