--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title> Google </title>
-        <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/0/09/IOS_Google_icon.png" type = "image/x-icon">
+        <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/0/09/IOS_Google_icon.pnggit" type = "image/x-icon">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
         <link href="style_google.css"
